# vara_backend_fastapi

./: .gitignore  README.md  alembic.ini  docker-postgres.yml  pyproject.toml
app/: config.py  initial_data.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  following.py  friend.py  friend_request.py  profile.py  tag.py  users.py  video.py
app/configs/: config.py
app/core/: deps.py  security.py
app/db/: database.py  init_db.py
app/models/: following_model.py  friend_model.py  friend_request_model.py  tag_model.py  user_model.py  video_model.py
app/repositories/: base_repository.py  following_repository.py  friend_repository.py  friend_request_repository.py  tag_repository.py  user_repository.py  video_repository.py
app/schemas/: __init__.py  following_schema.py  friend_request_schema.py  friend_schema.py  tag_schema.py  token_schema.py  user_schema.py  video_schema.py
app/usecase/: following_usecase.py  friend_request_usecase.py  friend_usecase.py  tag_usecase.py  user_usecase.py  video_usecase.py
migrations/: env.py
migrations/versions/: 2023_07_11_2331-de014a1385ac_create_users_table.py  2023_07_21_2123-d8442ed477a1_create_following_table_and_add_column_.py  2023_07_24_2028-485130a23687_create_friend_table_and_friend_request_.py  2023_07_26_2331-ef37318f7ce8_create_video_table_and_video_like_table.py  2023_07_27_0016-2537c7613974_add_user_id_and_video_id_index_to_video_.py  2023_07_28_2342-b36926c14efb_add_tag_table_and_video_tag_table_.py
