[tool.poetry]
name = "vara-backend-fastapi"
version = "0.1.0"
description = ""
authors = ["Niwaiwa <po2846@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.18"
fastapi = {version = "^0.99", extras = ["all"]}
asgi-correlation-id = "^4.2.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
